--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,3 @@
+<% provide(title, 'Sign up') %>
 <h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<p>This will be a sign up page for new users.</p>
