--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(title, 'Sign up') %>
-<h1>Users#new</h1>
+<% provide(:title, 'Sign up') %>
+<h1>Sign Up</h1>
 <p>This will be a sign up page for new users.</p>
